syntax = "proto3";
package planet.mail;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "planet/mail/params.proto";
import "planet/mail/message.proto";
import "planet/mail/sent_message.proto";
// this line is used by starport scaffolding # 1

option go_package = "planet/x/mail/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/planet/mail/params";
  }
  // Queries a Message by id.
	rpc Message(QueryGetMessageRequest) returns (QueryGetMessageResponse) {
		option (google.api.http).get = "/planet/mail/message/{id}";
	}

	// Queries a list of Message items.
	rpc MessageAll(QueryAllMessageRequest) returns (QueryAllMessageResponse) {
		option (google.api.http).get = "/planet/mail/message";
	}

// Queries a SentMessage by id.
	rpc SentMessage(QueryGetSentMessageRequest) returns (QueryGetSentMessageResponse) {
		option (google.api.http).get = "/planet/mail/sent_message/{id}";
	}

	// Queries a list of SentMessage items.
	rpc SentMessageAll(QueryAllSentMessageRequest) returns (QueryAllSentMessageResponse) {
		option (google.api.http).get = "/planet/mail/sent_message";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetMessageRequest {
	uint64 id = 1;
}

message QueryGetMessageResponse {
	Message Message = 1 [(gogoproto.nullable) = false];
}

message QueryAllMessageRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMessageResponse {
	repeated Message Message = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSentMessageRequest {
	uint64 id = 1;
}

message QueryGetSentMessageResponse {
	SentMessage SentMessage = 1 [(gogoproto.nullable) = false];
}

message QueryAllSentMessageRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSentMessageResponse {
	repeated SentMessage SentMessage = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
